# adb-sync

./: .gitignore  CMakeLists.txt  Makefile  adb-sync.pro
forms/: mainwindow.ui
src/: App.cpp  App.h  app.cpp  app.h  dir.cpp  dir.h  history.cpp  history.h  listbox.cpp  main.cpp  mainwindow.cpp  mainwindow.h  program.cpp  version.h
src/OLD/: utils.cpp  utils.h
src/OLD/synchronizator-cross/: lista.cpp  lista.h  main.cpp  synchro.cpp  synchro.h
src/OLD/synchronizator-winapi/: app.cpp  app.h  config.cpp  config.h  controls.cpp  controls.h  events.cpp  files.cpp  files.h  history.cpp  history.h  io.cpp  io.h  listbox.cpp  main.cpp  program.cpp  strings.cpp  strings.h  subclassing.cpp  synchro.cpp  synchro.h  task.cpp  task.h  thread.cpp  thread.h  version.h
src/config/: ConfigLoader.cpp  ConfigLoader.h  ConfigProperties.cpp  ConfigProperties.h  Database.cpp  Database.h
src/diffs/: Diff.cpp  Diff.h  DiffType.h
src/dispatcher/: Event.cpp  Event.h  EventClass.cpp  EventClass.h  EventDispatcher.cpp  EventDispatcher.h  IEventObserver.cpp  IEventObserver.h
src/errors/: Error.cpp  Error.h  ParseError.cpp  ParseError.h  SystemCmdError.cpp  SystemCmdError.h
src/events/: DiffInvertedButtonClicked.h  DiffListUpdateRequest.h  DiffPartialScanCompleted.h  DiffRemovedButtonClicked.h  DiffScanButtonClicked.h  DiffScanCompleted.h  DiffSyncCompleted.h  ExecuteAllDiffsButtonClicked.h  ExecuteDiffButtonClicked.h  ProgressUpdated.h  ShowUIMessageRequest.h
src/filesystem/: ADB.cpp  ADB.h  Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  LocalFS.cpp  LocalFS.h  RegularFile.cpp  RegularFile.h
src/gui/: DiffListBox.cpp  DiffListBox.h  GUI.cpp  GUI.h  MainWindow.cpp  MainWindow.h
src/logger/: LogLevel.h  Logger.cpp  Logger.h  log.cpp  log.h  log_level.h
src/synchronizer/: DiffScanner.cpp  DiffScanner.h  DiffSync.cpp  DiffSync.h  Synchronizer.cpp  Synchronizer.h
src/synchronizer/commands/: CommandExecutor.cpp  CommandExecutor.h
src/synchronizer/diffs/: Diff.cpp  Diff.h  DiffScanner.h  DiffType.h
src/system/: CmdExecutor.cpp  CmdExecutor.h  CommandExecutor.cpp  CommandExecutor.h
src/test/: BusyboxTest.h  LocalFSTest.h  QApplicationTest.h  TestApp.cpp  TestApp.h  ThreadsTest.h
src/threads/: ContinuousThread.cpp  ContinuousThread.h  LoopThread.cpp  LoopThread.h  SingleThread.cpp  SingleThread.h  Thread.cpp  Thread.h  continuous_thread.cpp  continuous_thread.h  thread.cpp  timer.cpp  timer.h
src/utils/: string_utils.cpp  string_utils.h
test/: file1
